added polybar script

--- a/i3/config
+++ b/i3/config
@@ -1,59 +1,56 @@
 # i3 config file (v4)
 
-#
 # Remove borders from all windows
 for_window [class=".*"] border pixel 0
 
-
+#Set windows key as mod
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
+exec --no-startup-id ~/.config/polybar/polybar_launcher.sh
+
+#Set font
 font pango: Hack Nerd Font 10
+
+# NetworkManager is the most popular way to manage wireless networks on Linux, and nm-applet is a desktop environment-independent system tray GUI for it.
+exec --no-startup-id nm-applet
+
 
 # Start XDG autostart .desktop files using dex. See also https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
+
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+
+
 
 #set wallpaper
 exec --no-startup-id feh --bg-fill ~/Pictures/homelander.jpg
 
 # allow transparency window on kitty
-exec_always --no-startup-id kitty --background-opacity 0.8
+exec --no-startup-id picom -b
 
+#assign app to windows
+assign [class="idea"] 3
+assign [class="discord"] 6
+assign [class="brave"] 2
 
-#Lauch App no Startup
-exec --no-startup-id i3-msg 'workspace 2; exec brave'
-exec --no-startup-id i3-msg 'workspace 3; exec kitty'
-exec --no-startup-id i3-msg 'workspace 4; exec idea'
+#Lauch App no Startup# 
+exec --no-startup-id i3-msg 'workspace 1; exec kitty'
+exec --no-startup-id i3-msg 'workspace 2; exec brave' 
+exec --no-startup-id i3-msg 'workspace 3; exec idea'
 exec --no-startup-id i3-msg 'workspace 6; exec discord'
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux, and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-
-#set $refresh_i3status killall -SIGUSR1 i3status
-#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# move tiling windows via drag & drop by left-clicking into the title bar, or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
 
 # start Apps from keybindings
 bindsym $mod+Return exec kitty
 bindsym $mod+b exec brave
 bindsym $mod+i exec idea
 
+# Desktop shortcuts
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start rofi(program launcher)
-# A more modern dmenu replacement is rofi:
 bindsym $mod+d exec "rofi -modi drun,run -show drun"
 
 # change focus
@@ -108,10 +105,6 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 
-#Assign Apps to Workspace
-assign [class="Brave"] 2
-assign [class="kitty"] 3
-
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
@@ -158,12 +151,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
@@ -182,10 +170,3 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
-
-bar {
-        status_command polybar -r main 
-}
-
-
