--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,11 +9,7 @@
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
 ;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
+;   To learn more about how to configure Polybar go to https://github.com/polybar/polybar
 ;==========================================================
 
 [colors]
