--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -13,7 +13,7 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
+background =#1b263b
 background-alt = #373B41
 foreground = #C5C8C6
 primary = #F0C674
